--- a/mainStyle.css
+++ b/mainStyle.css
@@ -16,13 +16,18 @@ body {
   background-attachment:fixed;
 }
 
+/* anti-alias text */
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 h1 {
   display: inline-block;
   background: #dddddd;
   color: #1D1D1D;
   font-size: 30px;
-
-}
   
 }
 h2 {
