--- a/mainStyle.css
+++ b/mainStyle.css
@@ -16,7 +16,12 @@ body {
   background-attachment:fixed;
 }
 
+/* anti-alias text */
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 h1 {
   display: inline-block;
