--- a/mainStyle.css
+++ b/mainStyle.css
@@ -9,6 +9,7 @@ body {
   text-align: center;
   font-family: century gothic;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important;
   color: #dddddd;
   background: #000;
